# elixir-byowf

./: .gitignore  .ossignore  CLAUDE.md  LICENSE  README.md  mix.exs  refactor-liveview-1.md  skills.md  todo.md
pipeline/: .gitignore  generate_sidecars.py  pyproject.toml  video-generation.md  video-plan.md
pipeline/overrides/: 00-project-setup.yaml  01-tcp-socket.yaml  02-conn-struct.yaml  03-router-dsl.yaml  04-response-helpers.yaml  05-dynamic-routes.yaml  06-otp-supervision.yaml  07-templates.yaml  08-middleware.yaml  09-post-parser.yaml  10-cowboy-adapter.yaml  11-error-handler.yaml  12-liveview.yaml  13-frontend-glue.yaml  14-diffing.yaml  15-hot-reloader.yaml  16-morphdom.yaml  17-pubsub.yaml  18-live-navigation.yaml  19-live-components.yaml  20-js-hooks.yaml  21-json-api.yaml  22-http-methods.yaml  23-scoped-routes.yaml  24-fine-grained-diffing.yaml  25-streams.yaml  26-file-uploads.yaml  27-path-helpers.yaml  28-flash-messages.yaml  29-presence.yaml  30-ecto-integration.yaml  31-csrf-protection.yaml  32-csp-headers.yaml  33-mix-ignite-routes.yaml  34-debug-error-page.yaml  35-logger-metadata.yaml  36-health-check.yaml  37-static-asset-pipeline.yaml  38-test-helpers.yaml  39-ssl-tls.yaml  (+5 more)
pipeline/pipeline/: __main__.py  cli.py  config.py  overrides.py
pipeline/pipeline/composer/: ffmpeg.py  timeline.py
pipeline/pipeline/parser/: ir.py  markdown.py
pipeline/pipeline/tts/: __init__.py  base.py  elevenlabs_provider.py  kokoro_provider.py  openai_provider.py
pipeline/pipeline/visuals/: scene_builder.py
pipeline/pipeline/visuals/scenes/: ascii_diagram.py  (+6 more)
(+235 files in other folders)
